# floam_custom

./: CMakeLists.txt
config/: configFile.yaml
include/: distanceFieldClass.h  grid_map_2d.h  laserMappingClass.h  laserProcessingClass.h  lidarOptimization.h  odomEstimationClass.h  signed_distance_field_2d.h
launch/: floam.launch  floam_mapping.launch  floam_velodyne.launch  projection.launch
result/: pose_trans.txt
result/evo_result/: kitti_05_odom.txt  kitti_05_sdf.txt  kitti_05_with_filter.txt  table.csv  table1.csv
result/kitti_dev_result/: stats.txt
result/kitti_dev_result/data/: 05.txt
result/kitti_dev_result/errors/: 05.txt
result/kitti_dev_result/plot_error/: 05_rl.txt  05_rs.txt  05_ts.txt  avg_tl.txt
result/kitti_dev_result/plot_path/: 05.gp
result/kitti_devkit_result/05_origin/: stats.txt
result/kitti_devkit_result/05_origin/errors/: 05.txt
result/kitti_devkit_result/05_origin/plot_error/: 05_tl.txt  avg_rl.txt  avg_rs.txt  avg_ts.txt
result/kitti_devkit_result/05_origin/plot_path/: 05.txt
result/kitti_devkit_result/05_with_filter/: stats.txt
result/kitti_devkit_result/05_with_filter/errors/: 05.txt
result/kitti_devkit_result/05_with_filter/plot_error/: 05_rs.txt  05_tl.txt  05_ts.txt  avg_rl.txt
result/kitti_devkit_result/05_with_filter/plot_path/: 05.gp  05.txt
result/kitti_devkit_result/05_with_sdf/: stats.txt
result/kitti_devkit_result/05_with_sdf/errors/: 05.txt
result/kitti_devkit_result/05_with_sdf/plot_error/: avg_rl.txt  avg_rs.txt  avg_tl.txt  avg_ts.txt
result/kitti_devkit_result/05_with_sdf/plot_path/: 05.gp  05.txt
rviz/: floam.rviz  floam_mapping.rviz  projection.rviz
scripts/: odom_to_kitti_converter.py
src/: distanceFieldClass.cpp  grid_map_2d.cpp  laserMappingClass.cpp  laserMappingNode.cpp  laserProcessingClass.cpp  laserProcessingNode.cpp  lidarOptimization.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp  savePoseNode.cpp  signed_distance_field_2d.cpp  signed_distance_field_2d_test.cpp  testProjection.cpp
